--- a/Nine-Mens-Morris/public/static/css/boardGame.css
+++ b/Nine-Mens-Morris/public/static/css/boardGame.css
@@ -37,13 +37,41 @@
   font-size: 20px;
   padding: 10px;
   opacity: 0;
-  border: var(--squareColor);
   border-style: ridge;
   border-width: calc(var(--lineThickness) / 1.5);
   border-radius: 8px;
-  background-color: var(--pointBorderColor);
   transition: opacity 0.5s ease-in-out;
   z-index: 1;
+}
+
+.game-winner.active-player0 {
+  background-color: var(--pointBorderColor);
+  border: var(--squareColor);
+  opacity: 1;
+}
+
+.game-winner.active-player0:hover {
+  box-shadow: 0 0 30px var(--pointColor);
+}
+
+.game-winner.active-player1 {
+  background-color: var(--player1Color);
+  border: var(--player1SelectedPoint);
+  opacity: 1;
+}
+
+.game-winner.active-player1:hover {
+  box-shadow: 0 0 30px var(--player1PossibleMovesColor);
+}
+
+.game-winner.active-player2 {
+  background-color: var(--player2Color);
+  border: var(--player2SelectedPoint);
+  opacity: 1;
+}
+
+.game-winner.active-player2 {
+  box-shadow: 0 0 30px var(--player2PossibleMovesColor);
 }
 
 .board-container {
@@ -52,17 +80,6 @@
   height: var(--boardSide);
   margin: var(--boardOffset) auto;
   border-radius: 50%;
-}
-
-.game-winner.active {
-  opacity: 1;
-}
-
-.game-winner:hover {
-  color: #e4e4e4;
-  font-weight: bold;
-  cursor: pointer;
-  box-shadow: 0 0 20px var(--pointColor);
 }
 
 /* Player Sections inside the Game Layout */
@@ -251,6 +268,31 @@
   background-color: var(--player2Color);
 }
 
+.player1-removable-pieces,
+.player2-removable-pieces {
+  transition: background-color 1.5s ease-in-out border-color 1.5 ease-in-out,
+    box-shadow 1.5s ease-in-out !important;
+}
+
+.player1-removable-pieces {
+  border-color: var(--player1PossibleMovesColor) !important;
+  background-color: var(--player1SelectedPoint) !important;
+  box-shadow: 0 0 20px var(--player1Color) !important;
+}
+
+.player2-removable-pieces {
+  border-color: var(--player2PossibleMovesColor) !important;
+  background-color: var(--player2SelectedPoint) !important;
+  box-shadow: 0 0 20px var(--player2Color) !important;
+}
+
+.player1-removable-pieces:hover,
+.player2-removable-pieces:hover {
+  border-color: var(--lineColor) !important;
+  background-color: var(--pointColor) !important;
+  box-shadow: 0 0 15px var(--pointColor) !important;
+}
+
 /* Board Related Elements */
 
 .point {
@@ -293,8 +335,18 @@
   box-shadow: 0 0 10px var(--player1PossibleMovesColor);
 }
 
+.point.possible-move-player1:hover {
+  background-color: var(--player1SelectedPoint);
+  box-shadow: 0 0 10px var(--player1PossibleMovesColor);
+}
+
 .point.possible-move-player2 {
   background-color: var(--player2PossibleMovesColor);
+  box-shadow: 0 0 10px var(--player2PossibleMovesColor);
+}
+
+.point.possible-move-player2:hover {
+  background-color: var(--player2SelectedPoint);
   box-shadow: 0 0 10px var(--player2PossibleMovesColor);
 }
 
