--- a/Nine-Mens-Morris/public/static/css/boardGame.css
+++ b/Nine-Mens-Morris/public/static/css/boardGame.css
@@ -105,7 +105,7 @@
 .player2-info {
   position: absolute;
   display: flex;
-  top: 13%;
+  top: 12%;
   text-align: center;
   justify-content: center;
   padding: 10px;
@@ -190,7 +190,7 @@
 
 .player1-messages,
 .player2-messages {
-  position: relative;
+  position: absolute;
   display: flex;
   flex-flow: row wrap;
   top: 35%;
@@ -230,6 +230,48 @@
   box-shadow: 0 0 40px var(--pointBorderColor);
 }
 
+/* Separatory Lines  */
+
+.top-separatory-line-player1,
+.bottom-separatory-line-player1,
+.top-separatory-line-player2,
+.bottom-separatory-line-player2 {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 45%;
+  height: 1%;
+  margin: 10px 0;
+  border-radius: 10px;
+}
+
+.top-separatory-line-player1,
+.top-separatory-line-player2 {
+  top: 45%;
+}
+
+.bottom-separatory-line-player1,
+.bottom-separatory-line-player2 {
+  /* top: 78%; */
+  bottom: 18%;
+}
+
+.top-separatory-line-player1,
+.bottom-separatory-line-player1 {
+  border-color: var(--player1SelectedPoint);
+  background-color: var(--player1SelectedPoint);
+  box-shadow: 0 0 10px var(--player1PossibleMovesColor);
+}
+
+.top-separatory-line-player2,
+.bottom-separatory-line-player2 {
+  border-color: var(--player2lectedPoint);
+  background-color: var(--player2SelectedPoint);
+  box-shadow: 0 0 10px var(--player2PossibleMovesColor);
+}
+
 /* Player Pieces Containers */
 
 .player1-pieces-container,
@@ -239,17 +281,27 @@
   align-items: center;
   justify-content: space-around;
   flex-flow: row wrap;
-  top: 44%;
-  height: fit-content;
+  top: 52%;
   max-width: 45%;
   text-align: center;
   padding: 2px;
   color: var(--pointColor);
-  background-color: transparent;
   border-radius: 10px;
   border-width: calc(var(--lineThickness) / 1.5);
-  transition: background-color 0.3s ease, border-color 0.3s ease;
+  transition: background-color 0.5s ease, border-color 0.5s ease;
   z-index: 3;
+}
+
+.player1-pieces-container {
+  border-color: var(--player1SelectedPoint);
+  background-color: var(--player1SelectedPoint);
+  box-shadow: 0 0 10px var(--player1PossibleMovesColor);
+}
+
+.player2-pieces-container {
+  border-color: var(--player2SelectedPoint);
+  background-color: var(--player2SelectedPoint);
+  box-shadow: 0 0 10px var(--player2PossibleMovesColor);
 }
 
 .player1-pieces-container div,
@@ -258,7 +310,14 @@
   height: calc(var(--pointRadius) * 7 / 4);
   border: 3px solid var(--pointColor);
   border-radius: 100%;
-  margin: 10px;
+  margin: 5px;
+  opacity: 1;
+  transition: opacity 0.3s ease-in;
+}
+
+.player1-pieces-container div.hidden-piece,
+.player2-pieces-container div.hidden-piece {
+  opacity: 0;
 }
 
 .player1-pieces-container div {
