The board is finally centered properly

--- a/Nine-Mens-Morris/public/static/css/base.css
+++ b/Nine-Mens-Morris/public/static/css/base.css
@@ -10,6 +10,7 @@
   --backgroundImage: url("../images/Dunes.jpg");
   --spaceBetweenButtons: 20px;
   --spaceEnd: 40px;
+  --largestSquareSize: 280px;
 
   /* Rules */
   --mainSliderBackgroundColor: #3e4f6d;
