--- a/Nine-Mens-Morris/public/static/css/boardGame.css
+++ b/Nine-Mens-Morris/public/static/css/boardGame.css
@@ -114,6 +114,7 @@
   position: absolute;
   display: flex;
   top: 12%;
+  min-width: 15%;
   text-align: center;
   justify-content: center;
   padding: 10px;
