--- a/Nine-Mens-Morris/public/static/css/leaderboard.css
+++ b/Nine-Mens-Morris/public/static/css/leaderboard.css
@@ -93,7 +93,7 @@
   border-radius: 10px;
   margin-top: 50px;
   margin-bottom: 20px;
-  transition: opacity 0.5s ease, transform 0.5s ease;
+  transition: opacity 0.5s ease-in-out;
   z-index: 3;
 }
 
