--- a/Nine-Mens-Morris/public/static/css/base.css
+++ b/Nine-Mens-Morris/public/static/css/base.css
@@ -38,32 +38,20 @@
   --lineColor: #8499ce;
   --squareColor: #101f44;
 
-  --player1Color: #34649c;
-  --player1PossibleMovesColor: #a0c9e8;
-  --player1SelectedPoint: #0e376d;
-  --activePlayer1Color: #fff;
-  --player1BoardPieces: #0e376d;
-
-  --player2Color: #cc3336;
-  --player2PossibleMovesColor: #f08080;
-  --player2SelectedPoint: #990303;
-  --activePlayer2Color: #990303;
-  --player2BoardPieces: #990303;
-
-  --boardOffset: 25px;
-
-  /* NEW COLORS */
-
-  --player1Color: #3695a3;
+  --player1Color: #0a5c70;
   --piece1Color: #0a5c70;
   --player1PossibleMovesColor: #a0c9e8;
-  --player1SelectedPoint: #64abbb;
+  --player1SelectedPoint: #3695a3;
   --activePlayer1Color: #6082b6;
+  --player1BoardPieces: #0e376d;
 
   --player2Color: #c81d25;
   --piece2Color: #e43c42;
   --player2PossibleMovesColor: #f08080;
   --player2SelectedPoint: #ff5a5f;
+  --activePlayer2Color: #990303;
+  --player2BoardPieces: #990303;
+
   --boardOffset: 25px;
 
   /* Configuration */
