--- a/Nine-Mens-Morris/public/static/css/boardGame.css
+++ b/Nine-Mens-Morris/public/static/css/boardGame.css
@@ -514,3 +514,58 @@
   background-color: var(--squareColor);
   align-self: center;
 }
+
+.restart {
+  position: absolute;
+  display: flex;
+  width: 40%;
+  align-items: center;
+  padding: 0.8em;
+  background-color: var(--squareColor);
+  justify-content: center;
+  text-align: center;
+  bottom: 5%;
+  border: 5px solid var(--activePlayer1Color);
+  border-radius: 8%;
+}
+
+.restart-btn {
+  opacity: 1;
+}
+.restart-btn.hidden {
+  opacity: 0;
+}
+
+.restart-btn,
+.restart-btn.hidden {
+  position: relative;
+  color: #fff;
+  background-color: transparent;
+  font-size: 16px;
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+  z-index: 1;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.restart-btn::after,
+.restart-btn.hidden::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  width: 100%;
+  height: 3px;
+  background: #fff;
+  border-radius: 5px;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.3s;
+}
+
+.restart-btn:hover::after,
+.restart-btn.hidden:hover::after {
+  transform-origin: left;
+  transform: scaleX(1);
+}
