--- a/Nine-Mens-Morris/public/static/css/configuration.css
+++ b/Nine-Mens-Morris/public/static/css/configuration.css
@@ -119,7 +119,7 @@
   letter-spacing: 2px;
   text-transform: uppercase;
   margin-top: 15px;
-  transition: transform 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .btn-config:hover {
