--- a/Nine-Mens-Morris/public/static/css/errorMessages.css
+++ b/Nine-Mens-Morris/public/static/css/errorMessages.css
@@ -1,12 +1,15 @@
 .modal {
-    top: 0;
+    margin-left: 5px;
+    margin-top: 45%;
     display: none;
-    position: fixed;
-    width: 100vw;
-    height: 100vw;
-    background-color: #505562;
+    position: absolute;
+    width: 50%;
+    height: 10%;
+    background-color: transparent;
     align-items: center;
-    justify-content: center;   
+    justify-content: center;  
+    z-index: 1; 
+    transition: display 10s ease-in-out;  /*Not Functioning yet*/
 }
 
 .modal.active {
@@ -14,9 +17,9 @@
 }
 
 .modal-content {
-    background: #f1f2f3;
-    width: 500px;
-    height: 500px;
+    background: #505562;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     position: relative;
     box-shadow: 0 0.75em 1em #0b0c0e4d;
@@ -40,11 +43,12 @@
 
 .closeIcon {
     position: absolute;
+    margin-top: 2px;
     right: 20px;
     top: 20px;
     color: #abafba;
     transition: .3s;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .closeIcon:hover {
@@ -60,11 +64,14 @@
     padding: 20px;
 }
 
-span.icon {
-    font-size: 50px;
+span.error-icon {
+    position: absolute;
+    margin-right: 85%;
+    font-size: 40px;
     color: #f65656;
 }
 
-.right-items {
+.error-message {
     margin: left;
+    font-size: 30px;
 }
